# Aivy-Tutor-star

./: .env  .npmrc  mem0 memory guide  next.config.js  package-lock.json  package.json  tsconfig.json
Ai tutor addons/components/layout/: navbar.tsx  sidebar.tsx
Ai tutor addons/components/onboarding/: gdpr-consent.tsx
Ai tutor addons/lib/ai/: agents.ts
Ai tutor addons/lib/email/: send.ts
app/: globals.css  layout.tsx  page.tsx
app/(dashboard)/chat/: page.tsx
app/(dashboard)/knowledge/: page.tsx
app/api/: init.ts
app/api/chat/: route.ts
app/api/memory/: index.ts  route.ts
app/api/profile/: route.ts
components/: KnowledgeGraphVisualization.tsx
components/chat/: chat-message.tsx
components/knowledge/: DocumentUploader.tsx  DocumentsList.tsx  upload-button.tsx
components/layout/: navbar.tsx  sidebar.tsx
components/onboarding/: gdpr-consent.tsx
components/profile/: profile-edit-form.tsx
lib/ai/: agents.ts  hybrid-agent.ts  memory-aware-agent.ts  reActAgent.ts
lib/auth/: config.ts
lib/email/: resend.ts  templates.ts
lib/knowledge/: document-processor - Copy.ts  document-processor.ts  embeddings.ts  search.ts  types.ts  url-processor.ts
lib/memory/: bridge.ts  mem0-client.ts  memory-service.ts  memory-tools.ts
lib/memory/python/: mem0_bridge.py  pyproject.toml
lib/memory/python/mem0ai/: __init__.py
lib/milvus/: client.ts  collections.ts  knowledge-graph.ts  vectors.ts
lib/services/: knowledge-graph.ts  knowledge-service.ts
prisma/: schema.prisma
scripts/: setup-milvus.ts  test-bridge.ts  test-milvus.ts
types/: chat.ts
(+7 files in other folders)
